# qc-etl

./: .env-example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER_GUIDE.md  Jenkinsfile  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  make.bat
pinery/: __init__.py  column.py  parse.py  utility.py
qcetl/: __init__.py  __main__.py  api.py  column.py
qcetl/analysis_delly/: __init__.py  parse.py
qcetl/analysis_mrd/: __init__.py  parse.py
qcetl/analysis_mutect2/: __init__.py  parse.py
qcetl/analysis_purple/: __init__.py  parse.py
qcetl/analysis_rsem/: __init__.py  parse.py
test/: cachechecker.py  test_analysis_delly.py  test_analysis_mrd.py  test_analysis_mutect2.py  test_analysis_purple.py  test_analysis_rsem.py  test_analysis_sequenza.py  test_analysis_starfusion.py  test_api.py  test_bamqc3.py  test_bamqc4.py  test_bamqclite.py  test_bcl2barcode.py  test_bcl2barcodecaller.py  test_bedtools.py  test_biomodalqc.py  test_bwamem.py  test_cfmedipqc.py  test_cli.py  test_common_utility.py  test_crosscheckfingerprint_caller.py  test_db_cache.py  test_dnaseqqc.py  test_emseqqc.py  test_fastqc.py  test_icametrics.py  test_ichorcna.py  test_ichorcna2.py  test_kraken2.py  test_metagenomicreport.py  test_multi_load.py  test_mutectcallability.py  test_picard_calculate_contamination.py  test_picard_crosscheckfingerprints.py  test_picard_hsmetrics.py  test_picard_hsmetrics_consensus_cruncher.py  test_purityqc_purple.py  test_purityqc_sequenza.py  test_qcetl_canary.py  test_rnaseqqc2.py  (+6 more)
(+228 files in other folders)
